fix(BaseController): validate project name input and improve error handling